Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,12 @@ a{
 }
 
 
-/* 
+
 @media screen and (max-width: 500px) {
     body {
-        background-image: url('images/christmas_decor_background.jpg');
-        background-size: cover;
+        /* background-image: url('images/christmas_decor_background.jpg'); */
+        /* background-size: cover; */
         background-attachment: scroll;
+        position: absolute;
     }
-} */
+}
